Web Inspector: Dark Mode: Increase the contrast in the network tab in @media (prefers-contrast: more) and @media (prefers-color-scheme: dark) https://bugs.webkit.org/show_bug.cgi?id=271860
Reviewed by NOBODY (OOPS!).

Darken the background of the detail panel in NetworkDetailView.css.
Darken the backgrounds in NetworkTableContentView.css.
Lighten the error text color in NetworkTableContentView.css.
Lighten the title, label, and details in ResourceDetailsSection.css.
Increase the lightness of the time, label, and headers in ResourceTimingBreakdownView.css.
Darken the zebra stripes in Table.css.

* Source/WebInspectorUI/UserInterface/Views/NetworkDetailView.css:
(@media (prefers-color-scheme: dark) @media (prefers-contrast: more) .network-detail):
* Source/WebInspectorUI/UserInterface/Views/NetworkTableContentView.css:
(@media (prefers-color-scheme: dark) @media (prefers-contrast: more) .network-table > .table .data-container .cell.name .range):
(@media (prefers-color-scheme: dark) @media (prefers-contrast: more) .network-table > .table :not(.header) .cell.waterfall .waterfall-container > .area.dom-fullscreen):
(@media (prefers-color-scheme: dark) @media (prefers-contrast: more) .content-browser > .navigation-bar .item):
(@media (prefers-color-scheme: dark) @media (prefers-contrast: more) .network-table .error):
* Source/WebInspectorUI/UserInterface/Views/ResourceDetailsSection.css:
(.resource-details > section.incomplete > .details):
(@media (prefers-color-scheme: dark) @media (prefers-contrast: more) .resource-details > section > .title):
(@media (prefers-color-scheme: dark) @media (prefers-contrast: more) .resource-details > section.incomplete > .details,):
* Source/WebInspectorUI/UserInterface/Views/ResourceSizesContentView.css:
(@media (prefers-color-scheme: dark) @media (prefers-contrast: more) .resource-sizes > .content .label):
* Source/WebInspectorUI/UserInterface/Views/ResourceTimingBreakdownView.css:
(.resource-timing-breakdown .waterfall .block):
(@media (

--- a/Source/WebInspectorUI/UserInterface/Views/NetworkDetailView.css
+++ b/Source/WebInspectorUI/UserInterface/Views/NetworkDetailView.css
@@ -1,5 +1,6 @@
 /*
  * Copyright (C) 2018 Apple Inc. All rights reserved.
+ * Copyright (C) 2024 Frances Cornwall <frances_c@cox.net>.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -86,5 +87,11 @@
 
     .network-detail .item.close > .glyph {
         background-color: hsla(0, 0%, 100%, 0.2);
+    }
+
+    @media (prefers-contrast: more) {
+        .network-detail {
+            background-color: hsl(0, 0%, 15%);
+        }
     }
 }
