--- a/Source/WebInspectorUI/UserInterface/Views/NetworkTableContentView.css
+++ b/Source/WebInspectorUI/UserInterface/Views/NetworkTableContentView.css
@@ -1,5 +1,6 @@
 /*
  * Copyright (C) 2017-2020 Apple Inc. All rights reserved.
+ * Copyright (C) 2024 Frances Cornwall <frances_c@cox.net>.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -441,5 +442,19 @@ body[dir=rtl] .waterfall.network .block {
 
     .network-table > .table .cell.dom-node.name .icon {
         content: url(../Images/TypeIcons.svg#DOMElement-dark);
+    }
+
+    @media (prefers-contrast: more) {
+        .network-table > .table .data-container .cell.name .range {
+            color: var(--text-color-active);
+        }
+
+        .network-table > .table :not(.header) .cell.waterfall .waterfall-container > .area.dom-fullscreen {
+            background-color: hsl(0, 0%, 20%);
+        }
+
+        .network-table .error {
+            color: hsl(0, 86%, 80%);
+        }
     }
 }
