--- a/Source/WebInspectorUI/UserInterface/Views/ResourceDetailsSection.css
+++ b/Source/WebInspectorUI/UserInterface/Views/ResourceDetailsSection.css
@@ -1,5 +1,6 @@
 /*
  * Copyright (C) 2017-2020 Apple Inc. All rights reserved.
+ * Copyright (C) 2024 Frances Cornwall <frances_c@cox.net>.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -46,8 +47,8 @@
 }
 
 .resource-details > section.incomplete > .details {
-    color: var(--console-secondary-text-color) !important;
-    border-color: var(--console-secondary-text-color) !important;
+    color: var(--console-secondary-text-color);
+    border-color: var(--console-secondary-text-color);
 }
 
 .resource-details > section > .details > .pair {
@@ -75,4 +76,17 @@ body[dir] .resource-details > section.error > .details {
 
 .resource-details > section.error > .details > .pair > .key {
     color: var(--network-error-color);
+}
+
+@media (prefers-color-scheme: dark) {
+    @media (prefers-contrast: more) {
+        .resource-details > section > .title {
+            color: hsl(0, 0%, 95%);
+        }
+
+        .resource-details > section.incomplete > .details,
+        .resource-sizes > .content .label {
+           color: hsl(0, 0%, 90%);
+        }
+    }
 }
