--- a/Source/WebInspectorUI/UserInterface/Views/ResourceSizesContentView.css
+++ b/Source/WebInspectorUI/UserInterface/Views/ResourceSizesContentView.css
@@ -1,5 +1,6 @@
 /*
  * Copyright (C) 2017-2020 Apple Inc. All rights reserved.
+ * Copyright (C) 2024 Frances Cornwall <frances_c@cox.net>
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -111,5 +112,11 @@
 @media (prefers-color-scheme: dark) {
     .resource-sizes > .content .label {
         color: var(--text-color-secondary);
+    }
+
+    @media (prefers-contrast: more) {
+        .resource-sizes > .content .label {
+            color: hsl(0, 0%, 95%);
+        }
     }
 }
