--- a/Source/WebInspectorUI/UserInterface/Views/ResourceTimingBreakdownView.css
+++ b/Source/WebInspectorUI/UserInterface/Views/ResourceTimingBreakdownView.css
@@ -1,5 +1,6 @@
 /*
  * Copyright (C) 2017-2020 Apple Inc. All rights reserved.
+ * Copyright (C) 2024 Frances Cornwall <frances_c@cox.net>.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -64,8 +65,8 @@
 }
 
 .resource-timing-breakdown .waterfall .block {
-    top: 1px !important;
-    height: 14px !important;
+    top: 1px;
+    height: 14px;
 }
 
 /* Additional styles used from `WI.NetworkTableContentView`. */
@@ -82,5 +83,16 @@
 
     .resource-timing-breakdown > table hr {
         border-color: var(--text-color-quaternary);
+    }
+
+    @media (prefers-contrast: more) {
+        .resource-timing-breakdown > table > tr > td.label,
+        .resource-timing-breakdown > table > tr > td.time {
+            color: hsl(0, 0%, 90%);
+        }
+
+        .resource-timing-breakdown > table > tr.header:not(.total-row) > td {
+            color: hsl(0, 0%, 95%);
+        }
     }
 }
